/***********************************************************************
 X3 ChangeLog

2006-12-24  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: fixed incorrect message when .dellamer is used on a
	nickname.

2006-12-25  Neil Spierling  <sirvulcan@gmail.com>

	* Merry Christmas! :)

	* This completes RFE 1577823.

	* src/spamserv.c: Added EXCEPTLEVEL, this replaces the code that
	excepts all people who are opped etc. Only people above this level
	will be immune now. Defaults to 300 for channels without the option

	* src/spamserv.h: Added exceptlevel.

	* src/spamserv.help: Added EXCEPTLEVEL.

2006-12-25  Neil Spierling  <sirvulcan@gmail.com>

	* Merry Christmas! :)

	* src/spamserv.c: Added trusted accounts support (RFE 1577823).

	* src/spamserv.help: ADDTRUST, DELTRUST, OADDTRUST, ODELTRUST,
	and LISTTRUST added.

2006-12-20  Alex Schumann   <rubin@afternet.org>

	* src/Makefile.in: undo temp fix

	* src/opserv.c: perm fix to HAVE_TRACK define problems

	* src/configure.in: perm fix to HAVE_TRACK define problems

	* src/config.h.in: perm fix to HAVE_TRACK define problems

2006-12-21  Neil Spierling  <sirvulcan@gmail.com>

	* src/Makefile.in: Temp fix.

2006-12-20  Alex Schumann   <rubin@afternet.org>

	* src/proto-p10.c: added full mark support including as a trace
	criteria.

	* src/opserv.c:  added full mark support including as a trace
	criteria.

	* src/hash.h:  added full mark support including as a trace
	criteria.

	* src/opserv.help: documented the 'marked' criteria in trace.

2006-12-20  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: fixing a bug with unmatching userlevels and the del*
	commands. (such as delpeon of a user with non-standard peon level)

	* src/spamserv.c: fixing memory corruption problems with dicts. Fixed
	crash with service rename, and probably many other problems.

	* src/mod-track.c: fixing memory problems, and the broken set command.
	Track may be stable now, needs large scale testing.
